--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <script defer src="./js/index.js"></script>
-  <link rel="stylesheet" href="./css/index.css">
+  <script defer src="./src/index.js"></script>
+  <link rel="stylesheet" href="./src/index.css">
   <title>testvite</title>
 
   
@@ -13,6 +13,8 @@
 <body>
 
   <h1>testvite</h1>
+  <img src="./javascript.svg" alt="">
+  <img src="./vite.svg" alt="">
   <p>testvite is a simple test project to test the Vite build tool.</p>
 
   <div class="container">
